# freeimage-cmake

./: CMakeLists.txt  FreeImageConfig.cmake
Source/FreeImage/: Plugin.cpp
TestAPI/: CMakeLists.txt  MainTestSuite.cpp
